# crossbow

./: .gitignore  README.md  README.org  TODO.org  crossbow.cabal  default.nix  hie.yaml  lib.cb  shell.nix
.circleci/: config.yml
app/: Main.hs
src/Crossbow/: Builtin.hs  Evaluator.hs  Execute.hs  Interpreter.hs  Lib.hs  Parser.hs  Types.hs  Util.hs
test/: TestSuite.hs  aoc.cb  file_test.cb
